--- a/scss-utilities/_overlay.scss
+++ b/scss-utilities/_overlay.scss
@@ -1,3 +1,6 @@
+@use 'sass:map';
+@use '../scss-utilities/m-utilities-variables' as mVariables;
+
 $overlay-bg: rgba(0, 0, 0, .8) !default;
 $overlay-color: #fff !default; // colore dello spinner bs4
 
@@ -6,7 +9,7 @@ $overlay-color: #fff !default; // colore dello spinner bs4
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 999991;
+  z-index: map.get(mVariables.$m-utilities-z-index, overlay);
   display: flex;
   align-items: center;
   justify-content: center;
